--- a/src/View/Login.fxml
+++ b/src/View/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
@@ -45,10 +46,14 @@
                                     <Font name="Cambria Bold" size="25.0" />
                                  </font>
                               </Label>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Tạo tài khoản mới">
+                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" stylesheets="@../css/login.css" text="Tạo tài khoản mới">
                                  <font>
                                     <Font name="Cambria" size="16.0" />
                                  </font>
+                                 <styleClass>
+                                    <String fx:value="transparent" />
+                                    <String fx:value="create-account-btn" />
+                                 </styleClass>
                               </Button>
                            </children>
                         </VBox>
@@ -70,12 +75,12 @@
                            <children>
                               <VBox alignment="CENTER" spacing="25.0">
                                  <children>
-                                    <TextField maxWidth="-Infinity" prefHeight="45.0" prefWidth="356.0" promptText="Username">
+                                    <TextField maxWidth="-Infinity" prefHeight="45.0" prefWidth="356.0" promptText="Username" styleClass="textfield-login" stylesheets="@../css/login.css">
                                        <font>
                                           <Font name="Cambria" size="16.0" />
                                        </font>
                                     </TextField>
-                                    <PasswordField maxWidth="-Infinity" prefHeight="45.0" prefWidth="357.0" promptText="Password">
+                                    <PasswordField maxWidth="-Infinity" prefHeight="45.0" prefWidth="357.0" promptText="Password" styleClass="textfield-login" stylesheets="@../css/login.css">
                                        <font>
                                           <Font name="Cambria" size="16.0" />
                                        </font>
@@ -92,9 +97,9 @@
                               </Hyperlink>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER" prefHeight="46.0" prefWidth="400.0">
+                        <VBox alignment="CENTER" prefHeight="46.0" prefWidth="308.0" stylesheets="@../css/login.css">
                            <children>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Đăng nhập">
+                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" styleClass="login-btn" stylesheets="@../css/login.css" text="ĐĂNG NHẬP">
                                  <font>
                                     <Font name="Cambria" size="16.0" />
                                  </font>
