--- a/src/View/Dashboard.fxml
+++ b/src/View/Dashboard.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,39 +14,56 @@
 <?import javafx.scene.text.Font?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1300.0" styleClass="linear-background" stylesheets="@../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="linear-background" stylesheets="@../css/dashboard.css">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" stylesheets="@../css/dashboard.css">
          <children>
             <BorderPane layoutX="47.0" layoutY="47.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <left>
                   <AnchorPane prefHeight="722.0" prefWidth="200.0" styleClass="menu-form" stylesheets="@../css/dashboard.css" BorderPane.alignment="CENTER">
                      <children>
-                        <HBox alignment="CENTER" layoutX="-1.0" layoutY="35.0" prefHeight="180.0" prefWidth="201.0" AnchorPane.bottomAnchor="543.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0">
+                        <VBox layoutX="-32.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <ImageView fitHeight="154.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/cafe.png" />
-                                 </image>
-                              </ImageView>
+                              <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0">
+                                 <children>
+                                    <Label text="Café Wizard">
+                                       <font>
+                                          <Font name="Cambria Bold Italic" size="26.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="180.0" prefWidth="201.0">
+                                 <children>
+                                    <ImageView fitHeight="154.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/cafe.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                              <ScrollPane prefHeight="118.0" prefWidth="200.0" style="-fx-control-inner-background: transparent;" styleClass="transparent-background" stylesheets="@../css/dashboard.css" VBox.vgrow="ALWAYS">
+                                 <content>
+                                    <VBox prefHeight="659.0" prefWidth="200.0" stylesheets="@../css/dashboard.css">
+                                       <children>
+                                          <HBox prefHeight="73.0" prefWidth="173.0">
+                                             <children>
+                                                <Label text="Label" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </content>
+                              </ScrollPane>
                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER" layoutX="-4.0" layoutY="20.0" prefHeight="48.0" prefWidth="200.0" AnchorPane.bottomAnchor="722.4" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Label text="Café Wizard">
-                                 <font>
-                                    <Font name="Cambria Bold Italic" size="26.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </HBox>
+                        </VBox>
                      </children>
                   </AnchorPane>
                </left>
                <center>
                   <AnchorPane prefHeight="585.0" prefWidth="1080.0" styleClass="center" stylesheets="@../css/dashboard.css" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
                      </BorderPane.margin>
                      <children>
                         <VBox layoutX="65.0" layoutY="57.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -57,7 +75,7 @@
                                           <Insets left="10.0" />
                                        </HBox.margin>
                                        <children>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
                                                 <Image url="@../img/icons8-avatar-48.png" />
                                              </image>
@@ -70,7 +88,35 @@
                                        </children>
                                     </HBox>
                                     <Pane prefHeight="56.0" prefWidth="633.0" HBox.hgrow="ALWAYS" />
-                                    <HBox prefHeight="100.0" prefWidth="200.0" />
+                                    <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                       <children>
+                                          <HBox alignment="CENTER" prefHeight="56.0" prefWidth="218.0" spacing="20.0">
+                                             <children>
+                                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-letter-50.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-setting-50.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-bell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </children>
+                                             <HBox.margin>
+                                                <Insets left="20.0" />
+                                             </HBox.margin>
+                                          </HBox>
+                                       </children>
+                                    </HBox>
                                  </children>
                               </HBox>
                               <HBox prefHeight="685.0" prefWidth="1090.0" />
