--- a/src/View/Dashboard.fxml
+++ b/src/View/Dashboard.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1300.0" styleClass="linear-background" stylesheets="@../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1300.0" styleClass="transparentbackground" stylesheets="@../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.DashboardController">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" stylesheets="@../css/dashboard.css">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="linear-background" stylesheets="@../css/dashboard.css">
          <children>
             <BorderPane layoutX="47.0" layoutY="47.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <left>
@@ -42,13 +42,92 @@
                                     </ImageView>
                                  </children>
                               </HBox>
-                              <ScrollPane prefHeight="118.0" prefWidth="200.0" style="-fx-control-inner-background: transparent;" styleClass="transparent-background" stylesheets="@../css/dashboard.css" VBox.vgrow="ALWAYS">
+                              <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="118.0" prefWidth="200.0" styleClass="transparent-background" stylesheets="@../css/dashboard.css" VBox.vgrow="ALWAYS">
                                  <content>
-                                    <VBox prefHeight="659.0" prefWidth="200.0" stylesheets="@../css/dashboard.css">
+                                    <VBox prefHeight="659.0" prefWidth="200.0" spacing="10.0" styleClass="yellow-background" stylesheets="@../css/dashboard.css">
                                        <children>
-                                          <HBox prefHeight="73.0" prefWidth="173.0">
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
                                              <children>
-                                                <Label text="Label" />
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="45.0" prefWidth="198.0" spacing="25.0" styleClass="menu-label" stylesheets="@../css/dashboard.css">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../img/icons8-sell-48.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="119.0" text="Bán hàng">
+                                                   <font>
+                                                      <Font name="Cambria" size="18.0" />
+                                                   </font>
+                                                </Label>
                                              </children>
                                           </HBox>
                                        </children>
@@ -63,7 +142,7 @@
                <center>
                   <AnchorPane prefHeight="585.0" prefWidth="1080.0" styleClass="center" stylesheets="@../css/dashboard.css" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
-                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="-2.0" right="10.0" top="10.0" />
                      </BorderPane.margin>
                      <children>
                         <VBox layoutX="65.0" layoutY="57.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
